# tauri-plugin-is-simulator

./: .releaserc.json  Cargo.toml  LICENSE  README.md  build.rs  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
android/: build.gradle.kts
android/src/main/java/: IsSimulatorPlugin.kt
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: IsSimulatorPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: is_simulator.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
